# drv_chip_stm32f1xx

./: BUILD.gn  xmake.lua
inc/: drv_chip.h  drv_flash.h  drv_gpio.h  drv_i2c.h
include/: drv_chip.h
src/: drv_flash.c  drv_gpio.c  drv_i2c.c  startup_stm32f1xx.c
src/startup/: stm32f103xb.c  stm32f103xb.c.in
