declare_args() {
  drv_chip_without_interrupt = false
}

pkggroup("stm32f1xx_hal_driver") {
}

pkggroup("mds") {
}

config("drv_chip_stm32f1xx_cfg") {
  include_dirs = [ "include/" ]
}

static_library("drv_chip_stm32f1xx") {
  sources = [
    "src/drv_flash.c",
    "src/drv_gpio.c",
    "src/drv_i2c.c",
    "src/startup_stm32f1xx.c",
  ]

  defines = []

  if (defined(drv_chip_without_interrupt) && drv_chip_without_interrupt) {
    defines += [ "DRV_CHIP_WITHOUT_INTERRUPT=1" ]
  }

  public_deps = [
    ":mds",
    ":stm32f1xx_hal_driver",
  ]

  public_configs = [ ":drv_chip_stm32f1xx_cfg" ]
}
